# invars

./: .gitignore  Cargo.toml  README.md  llms.txt  pyproject.toml
crates/invars/: Cargo.toml
crates/invars/src/: lib.rs
crates/invars/src/application/: engine.rs  error.rs  mod.rs  use_case.rs
crates/invars/src/domain/invariant/: mod.rs
crates/invars/src/domain/report/value_object/: metric.rs
crates/invars/src/domain/severity/: error.old  mod.rs
crates/invars/src/domain/spec/: display.rs  mod.rs
crates/invars/src/infrastructure/: mod.rs
crates/invars/src/infrastructure/polars/: engine.rs  kind.rs  mod.rs  utils.rs
crates/invars/src/infrastructure/polars/checks/: mod.rs  not_null.rs  row_count_min.rs  unique.rs
crates/invars/src/infrastructure/polars/checks/column/: column_exists.rs  column_missing.rs  dtype_is.rs  mod.rs  schema_equals.rs
crates/invars/src/infrastructure/polars/checks/count/: mod.rs
crates/invars/src/infrastructure/polars/checks/custom/: mod.rs
crates/invars/src/infrastructure/polars/checks/date/: date_between.rs  mod.rs  monotonic_increasing.rs  no_future_dates.rs  no_gaps_in_sequence.rs
crates/invars/src/infrastructure/polars/checks/domain/: allowed_values.rs  forbidden_values.rs  mod.rs
crates/invars/src/infrastructure/polars/checks/null/: mod.rs  not_null.rs  null_ratio_max.rs
crates/invars/src/infrastructure/polars/checks/numeric/: mean_between.rs  mod.rs  stddev_max.rs  sum_between.rs  value_between.rs  value_max.rs  value_min.rs
crates/invars/src/infrastructure/polars/checks/relational/: column_equals.rs  conditional_not_null.rs  foreign_key.rs  mod.rs
crates/invars/src/infrastructure/polars/checks/stat/: mod.rs  outlier_ratio_max.rs  percentile_between.rs
crates/invars/src/infrastructure/polars/checks/string/: mod.rs  regex_match.rs  string_length_between.rs  string_length_max.rs  string_length_min.rs
crates/invars/src/infrastructure/polars/checks/unique/: composite_unique.rs  duplicate_ratio_max.rs  (+2 more)
crates/invars_polars/: Cargo.toml
crates/invars_polars/src/: engine.rs
crates/invars_polars/src/checks/: mod.rs  not_null.rs  row_count_min.rs  unique.rs
(+67 files in other folders)
