[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/lsalenson/invars"
authors = ["Léo Salenson <leo.salenson@outlook.fr>"]
description = "Data invariants for Polars."

[workspace.dependencies]
polars = { version = "0.53", features = ["lazy"] }
invars = { path="crates/invars" }
invars_domain = { path="crates/invars_domain" }
invars_application = { path="crates/invars_application" }
invars_polars = { path="crates/invars_polars" }