[package]
name = "invars"
version = "0.1.0"
edition = "2024"

[dependencies]
invars_domain = { path = "../invars_domain" }
invars_application = { path = "../invars_application" }
invars_polars = { path = "../invars_polars", optional = true }

[features]
default = ["polars"]
polars = ["invars_polars"]
