[package]
name = "invars_polars"
version = "0.0.1"
publish = false
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
invars_domain = { workspace = true }
invars_application = { workspace = true }
polars = { version = "0.53.0", features = [
    "lazy",
    "fmt",
] }